# asc-hq

./: .cproject  .gitignore  .hgignore  .project  ASC.launch  AUTHORS  Advanced Strategic Command.dev  Advanced Strategic Command.layout  ChangeLog  INSTALL  Makefile.am  Makefile.in  MapEditor.launch  README  TODO  UnitTester.launch  acconfig.h  acinclude.m4  aclocal.m4  asc.appdata.xml.in  asc.bpg  asc.kdevelop  asc.kdevprj  asc.lsm  asc.spec  asc.spec.in  asc.suse.spec  asc.suse.spec.in  bccmake.bat  bootstrap  bootstrap.versionmerge  buildnewrpm.sh  checkfordata.pl  config.guess  config.h.in  config.sub  configure  configure.ac  configure.in  getdata  (+9 more)
data/: 640480.pcx  Adapter_asc012_ARMADILLO.asctxt  Adapter_asc012_ASSAULT TANK.asctxt  Adapter_asc012_LIGHT ASSAULT.asctxt  Adapter_asc012_NOVA_2.asctxt  Adapter_asc012_SNIPER.asctxt  Adapter_asc013_Big_Gun.asctxt  Adapter_asc013_Crazy.asctxt  Adapter_asc013_GRS.asctxt  Adapter_asc013_SAM_Trooper.asctxt  Adapter_asc013_SAM_Turret.asctxt  Adapter_asc013_Spike.asctxt  Adapter_asc013_Swatter 2.asctxt  Adapter_asc014_AA-Ship.asctxt  Adapter_asc014_Apogee.asctxt  Adapter_asc014_Argus.asctxt  Adapter_asc014_Bumblebee.asctxt  Adapter_asc014_Cone.asctxt  Adapter_asc014_Crab.asctxt  Adapter_asc014_EXP_21.asctxt  Adapter_asc014_EXP_43.asctxt  Adapter_asc014_Eel.asctxt  Adapter_asc014_Hawk.asctxt  Adapter_asc014_Nighcap.asctxt  Adapter_asc014_Para Trooper.asctxt  Adapter_asc014_Predator.asctxt  Adapter_asc014_Raven.asctxt  Adapter_asc014_Scope.asctxt  Adapter_asc014_Shark.asctxt  Adapter_asc014_Tide.asctxt  Adapter_asc014_Tupi.asctxt  Adapter_asc014_Wake.asctxt  Adapter_asc014_Wedge.asctxt  Adapter_asc015_COMA III.asctxt  Adapter_asc015_COMA_II.asctxt  Adapter_asc015_EXP 5.asctxt  Adapter_asc015_GUNNER.asctxt  Adapter_asc015_HEAVY_GUN.asctxt  Adapter_asc015_JUDY.asctxt  Adapter_asc015_ROTOS.asctxt  (+917 more)
data/buildings/: Makefile.am  Makefile.in  _asc_gebaeude.asctxt  _bld_parent_town_498.asctxt  _bld_parent_town_499.asctxt  _history_asc-buildings.txt  asc-bld-info.txt  bld_asc_airport.asctxt  bld_asc_airport.pcx  bld_asc_airport2.asctxt  bld_asc_airport2.pcx  bld_asc_akku.asctxt  bld_asc_akku.pcx  bld_asc_depot.asctxt  bld_asc_depot.pcx  bld_asc_depot_fs.pcx  bld_asc_depot_hs.pcx  bld_asc_duellresearch10.asctxt  bld_asc_duellresearch2.asctxt  bld_asc_factory.asctxt  bld_asc_factory.pcx  bld_asc_gasstation.asctxt  bld_asc_gasstation.pcx  bld_asc_gasstation_fs.pcx  bld_asc_gasstation_ms.pcx  bld_asc_hq_big.asctxt  bld_asc_hq_big.pcx  bld_asc_hq_big_fs.pcx  bld_asc_hq_big_hs.pcx  bld_asc_jammer.asctxt  bld_asc_jammer.pcx  bld_asc_lab.asctxt  bld_asc_lab.pcx  bld_asc_mine.asctxt  bld_asc_mine.pcx  bld_asc_mine2.asctxt  bld_asc_mine2.pcx  bld_asc_mine3.pcx  bld_asc_mine_fs.pcx  bld_asc_mine_ms.pcx  (+28 more)
data/dialog/: Makefile.am  Makefile.in  asc2_dlg.theme  asc_dlg.theme
data/icons/: Makefile.am  Makefile.in  actioninfo.ascgui  attack.ascgui  cargo-dialog-resourceinfo.xcf  cargo-mining-window.xcf  cargodialog.ascgui  continuecampaign.ascgui  default.ascgui  fieldmarkings.xcf  mapeditor-icon.xcf  mapinfo.ascgui  newmultiplayergame.ascgui  overviewmap.ascgui  unitinfo.ascgui  unitinfodialog.ascgui  weaponinfo.ascgui  windinfo.ascgui
data/legacy/: A_BOMBER.VEH  G_DITCH.VEH  S_ARMTNK.VEH  S_FREIGH.VEH  g_puma.veh  legacy_unit_filter.asctxt  readme  s_typhon.veh
data/moredata/: Makefile.am  buildings.con  mk1.con  trrobj.con
data/music/: Makefile.am  Makefile.in
data/sounds/: Makefile.am  Makefile.in  sounds.asctxt
data/trrobj/: Makefile.am  Makefile.in  _filter_asc_terrain.asctxt  _filter_buildable_objects.asctxt  _filter_fieldmodify.asctxt  _filter_realistic_touch.asctxt  _filter_starfield.asctxt  _history_trrobj.txt  _info_infrastruktur.txt  _info_trrobj.txt  _obj_100_installation.asctxt  _obj_101_things_small.asctxt  _obj_102_forest.asctxt  _obj_103_hillside.asctxt  _obj_104_mntn.asctxt  _obj_105_hmntn.asctxt  _obj_106_small_rocks.asctxt  _obj_107_harbour.asctxt  _obj_108_harbour_hs.asctxt  _obj_110_water.asctxt  _trr1200_beton10.asctxt  _trr1201_hardsand11.asctxt  _trr1202_swamp20.asctxt  _trr1203_lowland12.asctxt  _trr1204_morass15.asctxt  _trr1205_mud13.asctxt  _trr1206_lowland13.asctxt  _trr1207_harbour.asctxt  _trr1208_water.asctxt  _trr1209_coast_vsw.asctxt  _trr1210_coast_sw.asctxt  _trr1211_installation.asctxt  _trr1212_dark_rubber_13.asctxt  _trr1213hs_small_rocks.asctxt  _trr1214_mountain.asctxt  _trr1215_hillside.asctxt  _trr1216hs_large_rocks.asctxt  _trr1217hs_pipe_inst_parent.asctxt  _trr1218hs_pipe_parent.asctxt  asc2system.asctxt  (+427 more)
data/trrobj2/: Makefile.am  Makefile.in  asc2system.asctxt  black.pcx  conc-2.pcx  deleteobject.asctxt  icebreak_dry.pcx  maptranslation_asc.asctxt  maptranslation_asc2bi.asctxt  mx1.pcx  mx2.pcx  mx3.pcx  o2000_harb_up_left_small.asctxt  o2000_harb_up_left_small.pcx  o2001_harb_up_right_small.asctxt  o2001_harb_up_right_small.pcx  o2001_harb_up_right_small_ms.pcx  o2002_harb_down_left_small.asctxt  o2002_harb_down_left_small.pcx  o2003_harb_down_right_small.asctxt  o2003_harb_down_right_small.pcx  o2003_harb_down_right_small_ms.pcx  o2004.pcx  o2004_harb_up_small.asctxt  o2005.pcx  o2005_harb_down_small.asctxt  o2005_ms.pcx  o2008.pcx  o2008_harb_up_down_small.asctxt  o2010_harb_up_small.asctxt  (+707 more)
extra-data/: Makefile.am  Makefile.in  _mount_pbp.bat  files_pbp.txt  pbp_mapparameter_z113.asc.gameparam  readme.txt
installer/: Makefile.am  Makefile.in  asc.nsi  asc.nsi.in  asc.vct  exclude_file_list  pbp.nsi
source/: ASCStringHelpers.h  CLoadable.cpp  CLoadable.h  ChangeLog  Makefile.am  Makefile.in  Named.cpp  Named.h  Property.cpp  Property.h  PropertyGroup.cpp  PropertyGroup.h  PropertyIF.h  README  TODO  accessconstraints-editor.cpp  accessconstraints-game.cpp  accessconstraints.h  applicationstarter.cpp  applicationstarter.h  artint.cpp  artint.h  asc-mainscreen.cpp  asc-mainscreen.h  asc.bpf  asc.bpr  ascstring.cpp  ascstring.h  astar2.cpp  astar2.h  attack.cpp  attack.h  autotraining.cpp  autotraining.h  baseaiinterface.h  basegfx.cpp  basegfx.h  basegui.h  basestreaminterface.h  basestrm.cpp  (+322 more)
(+7569 files in other folders)
